# conversation-os

./: .env.example  .gitignore  LICENSE  README.md  Sprint.md  Sprint1.md  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_baseline.py  0002_create_conversations_table.py
backend/app/: main.py
backend/app/api/: router.py  system.py
backend/app/conversation/: api.py  enums.py  events.py  models.py  repository.py  schemas.py  service.py  storage.py  validators.py
backend/app/conversation/tests/: conftest.py  test_api.py  test_repository.py  test_validators.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: base.py
backend/app/orchestrator/: base.py
backend/app/providers/: ai_provider.py
backend/app/repositories/: base.py
backend/app/schemas/: envelope.py
backend/app/services/: base.py
backend/tests/: conftest.py  test_system.py
docker/: README.md
docs/: PRODUCT_BACKLOG.md
docs/adr/: 001-tech-stack.md  002-repository-structure.md  003-domain-organization.md  004-vertical-slice-architecture.md  README.md
docs/api/: README.md
docs/architecture/: README.md
docs/deployment/: README.md
docs/docs/product/: VISION.md
docs/engineering/: README.md
docs/features/: conversation-intake.md
docs/founder/: ENGINEERING_JOURNAL.md
docs/product/: README.md
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
infrastructure/: README.md
scripts/: README.md
(+15 files in other folders)
